Added getNeighbors Example

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Examples</title>
+    <title>IOTA Pico Framework Examples for Browser using TypeScript</title>
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="p-5">
     <h1>API</h1>
-    <a href="./dist/api/getNodeInfoExample.html">getNodeInfo Example</a>
+    <a href="./dist/api/getNodeInfoExample.html">getNodeInfo Example</a><br/>
+    <a href="./dist/api/getNeighborsExample.html">getNeighbors Example</a>
 </body>
