--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body class="p-5">
-    <h1>API</h1>
+    <h1>IOTA Pico Framework Examples for Browser using TypeScript</h1>
+    <hr>
+    <h2>API</h2>
     <a href="./dist/api/getNodeInfoExample.html">getNodeInfo Example</a><br/>
     <a href="./dist/api/getNeighborsExample.html">getNeighbors Example</a>
 </body>
