--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <hr>
     <h2>API</h2>
     <a href="./dist/api/getNodeInfoExample.html">getNodeInfo Example</a><br/>
-    <a href="./dist/api/getNeighborsExample.html">getNeighbors Example</a>
+    <a href="./dist/api/getNeighborsExample.html">getNeighbors Example</a><br/>
+    <a href="./dist/api/addNeighborsExample.html">addNeighbors Example</a><br/>
+    <a href="./dist/api/removeNeighborsExample.html">removeNeighbors Example</a>
 </body>
