Added more API methods

--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
     <meta charset="UTF-8" />
     <title>IOTA Pico Framework Examples for Browser using TypeScript</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/examples.css">
 </head>
 
 <body class="p-5">
     <h1>IOTA Pico Framework Examples for Browser using TypeScript</h1>
     <hr>
     <h2>API</h2>
-    <a href="./dist/api/getNodeInfoExample.html">getNodeInfo Example</a><br/>
-    <a href="./dist/api/getNeighborsExample.html">getNeighbors Example</a><br/>
-    <a href="./dist/api/addNeighborsExample.html">addNeighbors Example</a><br/>
-    <a href="./dist/api/removeNeighborsExample.html">removeNeighbors Example</a>
+    <ul>
+        <li>
+            <a href="./dist/api/getNodeInfoExample.html">getNodeInfo</a>
+        </li>
+        <li>
+            <a href="./dist/api/getNeighborsExample.html">getNeighbors</a>
+        </li>
+        <li>
+            <a href="./dist/api/addNeighborsExample.html">addNeighbors</a>
+        </li>
+        <li>
+            <a href="./dist/api/removeNeighborsExample.html">removeNeighbors</a>
+        </li>
+        <li>
+            <a href="./dist/api/getTipsExample.html">getTips</a>
+        </li>
+        <li>
+            <a href="./dist/api/findTransactionsExample.html">findTransactions</a>
+        </li>
+        <li>
+            <a href="./dist/api/getTrytesExample.html">getTrytes</a>
+        </li>
+        <li>
+            <a href="./dist/api/getInclusionStatesExample.html">getInclusionStates</a>
+        </li>
+        <li>
+            <a href="./dist/api/getBalancesExample.html">getBalances</a>
+        </li>
+        <li>
+            <a href="./dist/api/getTransactionsToApproveExample.html">getTransactionsToApprove</a>
+        </li>
+    </ul>
 </body>
