Added remaining methods

--- a/index.html
+++ b/index.html
@@ -43,5 +43,26 @@
         <li>
             <a href="./dist/api/getTransactionsToApproveExample.html">getTransactionsToApprove</a>
         </li>
+        <li>
+            <a href="./dist/api/attachToTangleExample.html">attachToTangle</a>
+        </li>
+        <li>
+            <a href="./dist/api/interruptAttachingToTangleExample.html">interruptAttachingToTangle</a>
+        </li>
+        <li>
+            <a href="./dist/api/broadcastTransactionsExample.html">broadcastTransactions</a>
+        </li>
+        <li>
+            <a href="./dist/api/storeTransactionsExample.html">storeTransactions</a>
+        </li>
+        <li>
+            <a href="./dist/api/getMissingTransactionsExample.html">getMissingTransactions</a>
+        </li>
+        <li>
+            <a href="./dist/api/checkConsistencyExample.html">checkConsistency</a>
+        </li>
+        <li>
+            <a href="./dist/api/wereAddressesSpentFromExample.html">wereAddressesSpentFrom</a>
+        </li>
     </ul>
 </body>
